--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,21 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script >
+    google.load('visualization', '1.0', {
+        'packages': ['corechart']
+      });
+      </script>
+
 </head>
 
 <body>
   <app-root></app-root>
+
+    <script type="text/javascript"></script>
+
 </body>
 
 </html>
